--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
         </li>
 		    <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-           Tech Resources
+           Career Resources
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="#">Career Advice</a></li>
